test262: test262/test/language/expressions/tagged-template/template-object.js https://bugs.webkit.org/show_bug.cgi?id=170878

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-04-16
Reviewed by Saam Barati.

JSTests:

* stress/array-length-not-writable.js: Added.
(assert):
* test262.yaml:

Source/JavaScriptCore:

* runtime/JSArray.cpp:
(JSC::JSArray::put):
The fast path for setting an Array's length should check if length is
writable before checking for and possibly throwing a RangeError.

Canonical link: https://commits.webkit.org/187817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215401 268f45cc-cd09-0410-ab3c-d52691b4dbfc